# agent-convo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: tester_vs_target.yaml  tfy_gateway.yaml
skills/tester/probe-vague-claims/: SKILL.md
src/agent_convo/: __init__.py  cli.py  config.py  doctor.py  evaluation.py  evolution.py  export.py  improve.py  langchain_factory.py  runner.py  storage.py
tests/: test_config.py  test_evolution.py  test_export.py  test_improve.py  test_package_metadata.py  test_runner.py
