[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-convo"
version = "0.1.0"
description = "Durable parallel conversations between LangChain agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Saikrishna" }]
keywords = ["agents", "langchain", "evals", "openai", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=1.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
mcp = [
  "langchain-mcp-adapters>=0.2",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
agent-convo = "agent_convo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_convo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
